assignment1/src/CCALParser.java
/* Generated By:JavaCC: Do not edit this line. CCALParser.java */
import java.io.FileNotFoundException;
import java.io.FileInputStream;

public class CCALParser implements CCALParserConstants {

    public static void main(String args[]) {

        // Initialize the parser to read
        CCALParser parser;

        if (args.length == 0) {
            System.out.println("Reading from standard input...");
            parser = new CCALParser(System.in);
        } else if (args.length == 1) {
            try {
                parser = new CCALParser(new FileInputStream(args[0]));
            } catch (FileNotFoundException err) {
                System.err.println("File " + args[0] + " not found");
                return;
            }
        } else {
            System.out.println("CCAL Parser: Usage is one of:");
            System.out.println("    java CCALParser < inputfile");
            System.out.println("OR");
            System.out.println("    java CCALParser inputfile");
            return;
        }

        // Try to parse the file
        try {
            parser.program();
            System.out.println("File parsed successfully");
        } catch (ParseException err) {
            System.out.println(err.getMessage());
            System.out.println("Encountered the above errors while parsing the file");
        }
    }

/***********************************
***** SECTION 4 - THE GRAMMAR *****
***********************************/
  static final public void program() throws ParseException {
    trace_call("program");
    try {
      declList();
      functionList();
      main();
    } finally {
      trace_return("program");
    }
  }

  static final public void declList() throws ParseException {
    trace_call("declList");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VAR:
      case CONST:
        decl();
        jj_consume_token(SEMIC);
        declList();
        break;
      default:
        jj_la1[0] = jj_gen;
        ;
      }
    } finally {
      trace_return("declList");
    }
  }

  static final public void decl() throws ParseException {
    trace_call("decl");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VAR:
        varDecl();
        break;
      case CONST:
        constDecl();
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("decl");
    }
  }

  static final public void varDecl() throws ParseException {
    trace_call("varDecl");
    try {
      jj_consume_token(VAR);
      jj_consume_token(IDENT);
      jj_consume_token(COLON);
      type();
    } finally {
      trace_return("varDecl");
    }
  }

  static final public void constDecl() throws ParseException {
    trace_call("constDecl");
    try {
      jj_consume_token(CONST);
      jj_consume_token(IDENT);
      jj_consume_token(COLON);
      type();
      jj_consume_token(ASSIGN);
      expression();
    } finally {
      trace_return("constDecl");
    }
  }

  static final public void functionList() throws ParseException {
    trace_call("functionList");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case BOOL:
      case VOID:
        function();
        functionList();
        break;
      default:
        jj_la1[2] = jj_gen;
        ;
      }
    } finally {
      trace_return("functionList");
    }
  }

  static final public void function() throws ParseException {
    trace_call("function");
    try {
      type();
      jj_consume_token(IDENT);
      jj_consume_token(LPAREN);
      paramList();
      jj_consume_token(RPAREN);
      jj_consume_token(LBRAC);
      declList();
      statementBlock();
      jj_consume_token(RETURN);
      jj_consume_token(LPAREN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case TRUE:
      case FALSE:
      case LPAREN:
      case MIN:
      case NUMBER:
      case IDENT:
        expression();
        break;
      default:
        jj_la1[3] = jj_gen;
        ;
      }
      jj_consume_token(RPAREN);
      jj_consume_token(SEMIC);
      jj_consume_token(RBRAC);
    } finally {
      trace_return("function");
    }
  }

  static final public void type() throws ParseException {
    trace_call("type");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
        jj_consume_token(INT);
        break;
      case BOOL:
        jj_consume_token(BOOL);
        break;
      case VOID:
        jj_consume_token(VOID);
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("type");
    }
  }

  static final public void paramList() throws ParseException {
    trace_call("paramList");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENT:
        nempParamList();
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
    } finally {
      trace_return("paramList");
    }
  }

  static final public void nempParamList() throws ParseException {
    trace_call("nempParamList");
    try {
      jj_consume_token(IDENT);
      jj_consume_token(COLON);
      type();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        jj_consume_token(COMMA);
        nempParamList();
        break;
      default:
        jj_la1[6] = jj_gen;
        ;
      }
    } finally {
      trace_return("nempParamList");
    }
  }

  static final public void main() throws ParseException {
    trace_call("main");
    try {
      jj_consume_token(MAIN);
      jj_consume_token(LBRAC);
      declList();
      statementBlock();
      jj_consume_token(RBRAC);
    } finally {
      trace_return("main");
    }
  }

  static final public void statementBlock() throws ParseException {
    trace_call("statementBlock");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case WHILE:
      case SKP:
      case LBRAC:
      case IDENT:
        statement();
        statementBlock();
        break;
      default:
        jj_la1[7] = jj_gen;
        ;
      }
    } finally {
      trace_return("statementBlock");
    }
  }

  static final public void statement() throws ParseException {
    trace_call("statement");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENT:
        jj_consume_token(IDENT);
        statementPrime();
        break;
      case LBRAC:
        jj_consume_token(LBRAC);
        statementBlock();
        jj_consume_token(RBRAC);
        break;
      case IF:
        jj_consume_token(IF);
        condition();
        jj_consume_token(LBRAC);
        statementBlock();
        jj_consume_token(RBRAC);
        jj_consume_token(ELSE);
        jj_consume_token(LBRAC);
        statementBlock();
        jj_consume_token(RBRAC);
        break;
      case WHILE:
        jj_consume_token(WHILE);
        condition();
        jj_consume_token(LBRAC);
        statementBlock();
        jj_consume_token(RBRAC);
        break;
      case SKP:
        jj_consume_token(SKP);
        jj_consume_token(SEMIC);
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("statement");
    }
  }

  static final public void statementPrime() throws ParseException {
    trace_call("statementPrime");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ASSIGN:
        jj_consume_token(ASSIGN);
        expression();
        jj_consume_token(SEMIC);
        break;
      case LPAREN:
        jj_consume_token(LPAREN);
        argList();
        jj_consume_token(RPAREN);
        jj_consume_token(SEMIC);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("statementPrime");
    }
  }

  static final public void condition() throws ParseException {
    trace_call("condition");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NEGATE:
        jj_consume_token(NEGATE);
        condition();
        conditionPrime();
        break;
      case LPAREN:
        jj_consume_token(LPAREN);
        condition();
        jj_consume_token(RPAREN);
        conditionPrime();
        break;
      case TRUE:
      case FALSE:
      case MIN:
      case NUMBER:
      case IDENT:
        fragment();
        compOp();
        expression();
        conditionPrime();
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("condition");
    }
  }

  static final public void conditionPrime() throws ParseException {
    trace_call("conditionPrime");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR:
      case AND:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case AND:
          jj_consume_token(AND);
          break;
        case OR:
          jj_consume_token(OR);
          break;
        default:
          jj_la1[11] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        condition();
        break;
      default:
        jj_la1[12] = jj_gen;

      }
    } finally {
      trace_return("conditionPrime");
    }
  }

  static final public void expression() throws ParseException {
    trace_call("expression");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAREN:
        jj_consume_token(LPAREN);
        expression();
        jj_consume_token(RPAREN);
        break;
      case TRUE:
      case FALSE:
      case MIN:
      case NUMBER:
      case IDENT:
        fragment();
        expressionPrime();
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("expression");
    }
  }

  static final public void expressionPrime() throws ParseException {
    trace_call("expressionPrime");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ADD:
      case MIN:
        binOp();
        expression();
        expressionPrime();
        break;
      default:
        jj_la1[14] = jj_gen;

      }
    } finally {
      trace_return("expressionPrime");
    }
  }

  static final public void fragment() throws ParseException {
    trace_call("fragment");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENT:
        jj_consume_token(IDENT);
        fragmentPrime();
        expressionPrime();
        break;
      case MIN:
        jj_consume_token(MIN);
        jj_consume_token(IDENT);
        expressionPrime();
        break;
      case NUMBER:
        jj_consume_token(NUMBER);
        expressionPrime();
        break;
      case TRUE:
        jj_consume_token(TRUE);
        expressionPrime();
        break;
      case FALSE:
        jj_consume_token(FALSE);
        expressionPrime();
        break;
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("fragment");
    }
  }

  static final public void fragmentPrime() throws ParseException {
    trace_call("fragmentPrime");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAREN:
        jj_consume_token(LPAREN);
        argList();
        jj_consume_token(RPAREN);
        break;
      default:
        jj_la1[16] = jj_gen;

      }
    } finally {
      trace_return("fragmentPrime");
    }
  }

  static final public void binOp() throws ParseException {
    trace_call("binOp");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ADD:
        jj_consume_token(ADD);
        break;
      case MIN:
        jj_consume_token(MIN);
        break;
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("binOp");
    }
  }

  static final public void compOp() throws ParseException {
    trace_call("compOp");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQUAL:
        jj_consume_token(EQUAL);
        break;
      case NOT_EQUAL:
        jj_consume_token(NOT_EQUAL);
        break;
      case LESS_THAN:
        jj_consume_token(LESS_THAN);
        break;
      case LESS_THAN_EQUAL:
        jj_consume_token(LESS_THAN_EQUAL);
        break;
      case GRTR_THAN:
        jj_consume_token(GRTR_THAN);
        break;
      case GRTR_THAN_EQUAL:
        jj_consume_token(GRTR_THAN_EQUAL);
        break;
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("compOp");
    }
  }

  static final public void argList() throws ParseException {
    trace_call("argList");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENT:
        nempArgList();
        break;
      default:
        jj_la1[19] = jj_gen;
        ;
      }
    } finally {
      trace_return("argList");
    }
  }

  static final public void nempArgList() throws ParseException {
    trace_call("nempArgList");
    try {
      jj_consume_token(IDENT);
      nempArgListPrime();
    } finally {
      trace_return("nempArgList");
    }
  }

  static final public void nempArgListPrime() throws ParseException {
    trace_call("nempArgListPrime");
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        jj_consume_token(COMMA);
        nempArgList();
        break;
      default:
        jj_la1[20] = jj_gen;
        ;
      }
    } finally {
      trace_return("nempArgListPrime");
    }
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public CCALParserTokenManager token_source;
  static JavaCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[21];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x1800,0x1800,0x1c000,0x40300000,0x1c000,0x0,0x1000000,0x10c40000,0x10c40000,0x48000000,0x40300000,0x0,0x0,0x40300000,0x0,0x300000,0x40000000,0x0,0x0,0x0,0x1000000,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x0,0x0,0x5002,0x0,0x4000,0x0,0x4000,0x4000,0x0,0x5006,0x18,0x18,0x5002,0x3,0x5002,0x0,0x3,0x7e0,0x4000,0x0,};
   }

  /** Constructor with InputStream. */
  public CCALParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public CCALParser(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new JavaCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new CCALParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 21; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 21; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public CCALParser(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new JavaCharStream(stream, 1, 1);
    token_source = new CCALParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 21; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 21; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public CCALParser(CCALParserTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 21; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(CCALParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 21; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      trace_token(token, "");
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
      trace_token(token, " (in getNextToken)");
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[47];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 21; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
          if ((jj_la1_1[i] & (1<<j)) != 0) {
            la1tokens[32+j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 47; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  static private int trace_indent = 0;
  static private boolean trace_enabled = true;

/** Enable tracing. */
  static final public void enable_tracing() {
    trace_enabled = true;
  }

/** Disable tracing. */
  static final public void disable_tracing() {
    trace_enabled = false;
  }

  static private void trace_call(String s) {
    if (trace_enabled) {
      for (int i = 0; i < trace_indent; i++) { System.out.print(" "); }
      System.out.println("Call:   " + s);
    }
    trace_indent = trace_indent + 2;
  }

  static private void trace_return(String s) {
    trace_indent = trace_indent - 2;
    if (trace_enabled) {
      for (int i = 0; i < trace_indent; i++) { System.out.print(" "); }
      System.out.println("Return: " + s);
    }
  }

  static private void trace_token(Token t, String where) {
    if (trace_enabled) {
      for (int i = 0; i < trace_indent; i++) { System.out.print(" "); }
      System.out.print("Consumed token: <" + tokenImage[t.kind]);
      if (t.kind != 0 && !tokenImage[t.kind].equals("\"" + t.image + "\"")) {
        System.out.print(": \"" + t.image + "\"");
      }
      System.out.println(" at line " + t.beginLine + " column " + t.beginColumn + ">" + where);
    }
  }

  static private void trace_scan(Token t1, int t2) {
    if (trace_enabled) {
      for (int i = 0; i < trace_indent; i++) { System.out.print(" "); }
      System.out.print("Visited token: <" + tokenImage[t1.kind]);
      if (t1.kind != 0 && !tokenImage[t1.kind].equals("\"" + t1.image + "\"")) {
        System.out.print(": \"" + t1.image + "\"");
      }
      System.out.println(" at line " + t1.beginLine + " column " + t1.beginColumn + ">; Expected token: <" + tokenImage[t2] + ">");
    }
  }

}
